--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -11,8 +11,8 @@ redirect_from:
 {% include base_path %}
 {% capture written_label %}'None'{% endcapture %}
 
-If the embedded PDF below does not load, you can <u><a href="s3joholl.github.io/hollenbach_cv.pdf">download it
+If the embedded PDF below does not load, you can <u><a href="https://s3joholl.github.io/hollenbach_cv.pdf">download it
                 here.</a></u>
 <br />
 
-<embed src="s3joholl.github.io/hollenbach_cv.pdf" type="application/pdf" width="100%" />
+<embed src="https://s3joholl.github.io/hollenbach_cv.pdf" type="application/pdf" width="100%" />
