--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,7 +5,7 @@ permalink: /research/
 author_profile: true
 ---
 
-<h2>Journal Articles</h2>>
+<h2>Journal Articles</h2>
 <p style="margin: 0">Vogel, J., J. Hollenbach, A. Haering, B. Augurzky and A. Geissler (2024), <a
         href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank"><em>The association
             of hospital profitability and digital maturity – An explorative study using data from the German
@@ -59,13 +59,13 @@ author_profile: true
 
 <h2>Monographs</h2>
 Heger, D., B. Augurzky, H. Bergschneider, J. Hollenbach, I. Kolodziej, and C. Wuckel (2023), <em>Pflegeheim Rating
-    Report 2024: Pflege ohne Personal?</em>. Heidelberg: medhochzwei.
+    Report 2024: Pflege ohne Personal?</em>. Heidelberg: medhochzwei.<br>
 
 Augurzky, B., S. Krolop, J. Hollenbach, D. Monsees, A. Pilny, C. M. Schmidt, and C. Wuckel (2023), <em>Krankenhaus
-    Rating Report 2023: Die Revolution?!</em>. Heidelberg: medhochzwei.
+    Rating Report 2023: Die Revolution?!</em>. Heidelberg: medhochzwei.<br>
 
 Augurzky, B., S. Krolop, J. Hollenbach, D. Monsees, A. Pilny, C. M. Schmidt, and C. Wuckel (2022), <em>Krankenhaus
-    Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</em>. Heidelberg: medhochzwei.
+    Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</em>. Heidelberg: medhochzwei.<br>
 
 Heger, D., B. Augurzky, I. Kolodziej, C. Wuckel and J. Hollenbach (2021), <em>Pflegeheim Rating Report 2022: Der
     Pflegemarkt unter Druck - Zeit für Veränderung</em>. Heidelberg: medhochzwei.
