--- a/_pages/research.html
+++ b/_pages/research.html
@@ -6,11 +6,13 @@ author_profile: true
 ---
 
 <h2>Journal Articles</h2>
-<a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank">The association
-    of hospital profitability and digital maturity – An explorative study using data from the German
-    DigitalRadar project</a>
-with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler
-<b>Health Policy</b>, forthcoming
+<p style="margin: 0">
+    <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank">The
+        association of hospital profitability and digital maturity – An explorative study using data from the German
+        DigitalRadar project</a><br>
+    with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
+    <b>Health Policy</b>, forthcoming
+</p>
 <details>
     <summary>Abstract</summary>
     <p style="margin: 0" align="justify"><small>German hospitals largely rely on public investments for digitization. As
