--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,7 +15,8 @@ author_profile: true
 </p>
 <details>
     <summary>Abstract</summary>
-    <p style="margin: 0; background-color: #F2F4F4;" align="justify"><small>German hospitals largely rely on public
+    <p style="margin: 0; padding: 10px; background-color: #F2F4F4;" align="justify"><small>German hospitals largely rely
+            on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
             digital transformation. Thus, we assess if profitability affects digital maturity, and what other factors
             might be influential. We use digital maturity data from the DigitalRadar (DR) project (2021) and financial
