--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,7 +15,7 @@ author_profile: true
 </p>
 <details>
     <summary>Abstract</summary>
-    <p style="margin: 0; padding: 10px; background-color: #F2F4F4;" align="justify"><small>German hospitals largely rely
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German hospitals largely rely
             on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
             digital transformation. Thus, we assess if profitability affects digital maturity, and what other factors
@@ -37,12 +37,17 @@ author_profile: true
 
 
 <h2>Working Papers</h2>
-<p style="margin: 0">Guthmuller, S., D. Heger, J. Hollenbach and A. Werbeck (2023), <a
-        href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
-        target="_blank"><em>Retirement and Loneliness</em></a>. Ruhr Economic Papers #1048.</p>
+<p style="margin: 0">
+    <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
+        target="_blank">Retirement and Loneliness</a><br>
+    with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
+    Ruhr Economic Papers #1048
+</p>
 <details>
     <summary>Abstract</summary>
-    <p style="margin: 0" align="justify"><small>We study the short- and long-term effects of retirement on loneliness
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify">
+        <small>We study the short- and
+            long-term effects of retirement on loneliness
             using panel data from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
             exploit differences in retirement eligibility rules across and within countries in an instrumental variable
             setting. While we find no clear effect in the short run, entry into retirement reduces loneliness several
@@ -50,8 +55,10 @@ author_profile: true
             companionship. Our results suggest that individuals adapt to retirement by increasing their activity levels
             and reap the benefits in terms of reduced loneliness and social isolation. Heterogeneity analysis by gender
             shows that retirement increases feelings of loneliness for women in the short term and that this effect
-            appears to be driven by women lacking companionship when their partner is not yet retired.</small></p>
+            appears to be driven by women lacking companionship when their partner is not yet retired.
+        </small>
 </details>
+</p>
 
 <h2>Work in Progress</h2>
 <ul>
