--- a/_pages/research.html
+++ b/_pages/research.html
@@ -39,7 +39,7 @@ author_profile: true
 <h2>Working Papers</h2>
 <p style="margin: 0">
     <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
-        target="_blank">Retirement and Loneliness</a><br>
+        target="_blank">Retirement and Loneliness</a>(December 2023)<br>
     with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
     Ruhr Economic Papers #1048
 </p>
@@ -70,14 +70,27 @@ author_profile: true
 </ul>
 
 <h2>Monographs</h2>
-Heger, D., B. Augurzky, H. Bergschneider, J. Hollenbach, I. Kolodziej, and C. Wuckel (2023), <em>Pflegeheim Rating
-    Report 2024: Pflege ohne Personal?</em>. Heidelberg: medhochzwei.<br>
-
-Augurzky, B., S. Krolop, J. Hollenbach, D. Monsees, A. Pilny, C. M. Schmidt, and C. Wuckel (2023), <em>Krankenhaus
-    Rating Report 2023: Die Revolution?!</em>. Heidelberg: medhochzwei.<br>
-
-Augurzky, B., S. Krolop, J. Hollenbach, D. Monsees, A. Pilny, C. M. Schmidt, and C. Wuckel (2022), <em>Krankenhaus
-    Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</em>. Heidelberg: medhochzwei.<br>
-
-Heger, D., B. Augurzky, I. Kolodziej, C. Wuckel and J. Hollenbach (2021), <em>Pflegeheim Rating Report 2022: Der
-    Pflegemarkt unter Druck - Zeit für Veränderung</em>. Heidelberg: medhochzwei.
+<p style="margin: 0">
+    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-98800-008-8-pflegeheim-rating-report-2024"
+        target="_blank">Pflegeheim Rating Report 2024: Pflege ohne Personal?</a><br>
+    with Dörte Heger, Boris Augurzky, Henrik Bergschneider, Ingo Kolodziej and Christiane Wuckel<br>
+    Heidelberg: medhochzwei (2023)
+</p>
+<p style="margin: 0">
+    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2023-978-3-86216-976-4"
+        target="_blank">Krankenhaus Rating Report 2023: Die Revolution?!</a><br>
+    with Boris Augurzky, Sebastian Krolop, Daniel Monsees, Adam Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
+    Heidelberg: medhochzwei (2023)
+</p>
+<p style="margin: 0">
+    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2022-978-3-86216-915-3"
+        target="_blank">Krankenhaus Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</a><br>
+    with Boris Augurzky, Sebastian Krolop, Daniel Monsees, Adam Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
+    Heidelberg: medhochzwei (2022)
+</p>
+<p style="margin: 0">
+    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-86216-835-4-pflegeheim-rating-report-2022"
+        target="_blank">Pflegeheim Rating Report 2022: Der Pflegemarkt unter Druck - Zeit für Veränderung</a><br>
+    with Dörte Heger, Boris Augurzky, Ingo Kolodziej and Christiane Wuckel<br>
+    Heidelberg: medhochzwei (2021)
+</p>
