--- a/_pages/research.html
+++ b/_pages/research.html
@@ -11,7 +11,7 @@ author_profile: true
         association of hospital profitability and digital maturity – An explorative study using data from the German
         DigitalRadar project</a><br>
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
-    <b>Health Policy</b>, forthcoming
+    <b>Health Policy</b>, 2024, 142:105012
 </p>
 <details>
     <summary>Abstract</summary>
