--- a/_pages/research.html
+++ b/_pages/research.html
@@ -61,13 +61,14 @@ author_profile: true
 </p>
 
 <h2>Work in Progress</h2>
-<ul>
-    <li>Can education compensate for the genetic risk of cognitive decline? (with Hendrik Schmitz and Matthias Westphal)
-    </li>
-    <li>Gene-environment interactions with essential heterogeneity (with Hendrik Schmitz and Matthias Westphal)</li>
-    <li>A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar (with Alexander
-        Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering)</li>
-</ul>
+"Can education compensate for the genetic risk of cognitive decline?"
+<p style="margin: 0; margin-left: 25px">with Hendrik Schmitz and Matthias Westphal</p>
+Gene-environment interactions with essential heterogeneity
+<p style="margin: 0; margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
+A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar
+<p style="margin: 0; margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
+    Haering</p>
+
 
 <h2>Monographs</h2>
 <p>
