--- a/_pages/research.html
+++ b/_pages/research.html
@@ -63,9 +63,9 @@ author_profile: true
 <h2>Work in Progress</h2>
 "Can education compensate for the genetic risk of cognitive decline?"
 <p style="margin: 0; margin-left: 25px">with Hendrik Schmitz and Matthias Westphal</p>
-Gene-environment interactions with essential heterogeneity
+"Gene-environment interactions with essential heterogeneity"
 <p style="margin: 0; margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
-A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar
+"A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
 <p style="margin: 0; margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
     Haering</p>
 
