--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,6 +10,8 @@ author_profile: true
     <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank">The
         association of hospital profitability and digital maturity – An explorative study using data from the German
         DigitalRadar project</a><br>
+</p>
+<p style="margin: 0; margin-left: 25px">
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
 </p>
@@ -34,7 +36,7 @@ author_profile: true
                 investments.</small>
 </details>
 </p>
-
+</p>
 
 <h2>Working Papers</h2>
 <p style="margin: 0">
