--- a/_pages/research.html
+++ b/_pages/research.html
@@ -14,9 +14,11 @@ author_profile: true
 <p style="margin: 0; margin-left: 25px">
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
+</p>
 <details>
     <summary>Abstract</summary>
-    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German hospitals largely rely
+    <p style="margin: 0; ; margin-left: 25px; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
+            hospitals largely rely
             on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
             digital transformation. Thus, we assess if profitability affects digital maturity, and what other factors
@@ -35,7 +37,7 @@ author_profile: true
                 investments.</small>
 </details>
 </p>
-</p>
+
 
 <h2>Working Papers</h2>
 <p style="margin: 0">
@@ -63,11 +65,11 @@ author_profile: true
 
 <h2>Work in Progress</h2>
 "Can education compensate for the genetic risk of cognitive decline?"
-<p style="margin: 0; margin-left: 25px">with Hendrik Schmitz and Matthias Westphal</p>
+<p style="margin-left: 25px">with Hendrik Schmitz and Matthias Westphal</p>
 "Gene-environment interactions with essential heterogeneity"
-<p style="margin: 0; margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
+<p style="margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
-<p style="margin: 0; margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
+<p style="margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
     Haering</p>
 
 
