--- a/_pages/research.html
+++ b/_pages/research.html
@@ -16,8 +16,10 @@ author_profile: true
     <b>Health Policy</b>, 2024, 142:105012
 </p>
 <details>
-    <summary>Abstract</summary>
-    <p style="margin: 0; ; margin-left: 25px; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
+    <p style="margin-left: 25px" ;>
+        <summary>Abstract</summary>
+    </p>
+    <p style="margin: 0; ; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
             hospitals largely rely
             on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
