--- a/_pages/research.html
+++ b/_pages/research.html
@@ -66,11 +66,11 @@ author_profile: true
 </p>
 
 <h2>Work in Progress</h2>
-"Can education compensate for the genetic risk of cognitive decline?"
+<p style="margin:0">"Can education compensate for the genetic risk of cognitive decline?"</p>
 <p style="margin-left: 25px">with Hendrik Schmitz and Matthias Westphal</p>
-"Gene-environment interactions with essential heterogeneity"
+<p style="margin:0">"Gene-environment interactions with essential heterogeneity"</p>
 <p style="margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
-"A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
+<p style="margin:0">"A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"</p>
 <p style="margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
     Haering</p>
 
