--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,11 +15,10 @@ author_profile: true
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
 </p>
+<p style="margin-left: 25px">
 <details>
-    <p style="margin-left: 25px" ;>
-        <summary>Abstract</summary>
-    </p>
-    <p style="margin: 0; ; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
+    <summary>Abstract</summary>
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
             hospitals largely rely
             on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
@@ -38,6 +37,7 @@ author_profile: true
                 IT-strategy, (2) can standardize IT-architecture, and policies and (3) might cross-finance
                 investments.</small>
 </details>
+</p>
 </p>
 
 
