--- a/_pages/research.html
+++ b/_pages/research.html
@@ -65,12 +65,19 @@ author_profile: true
 
 <h2>Work in Progress</h2>
 "Can education compensate for the genetic risk of cognitive decline?"
-<p style="margin: 0; margin-left: 25px; margin-bottom: 50px;">with Hendrik Schmitz and Matthias Westphal</p>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Matthias Westphal</p>
 "Gene-environment interactions with essential heterogeneity"
-<p style="margin: 0; margin-left: 25px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal</p>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal
+</p>
+"Life‑cycle Health Effects of Compulsory Schooling"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
-<p style="margin: 0; margin-left: 25px">with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Alexander Geissler, Malte Haring, Volker Amelung,
+    Sylvia Thun and Alexander
     Haering</p>
+"Dieselgate, emissions, health costs"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Robin Kottmann, Felix Noth, Lena Tonzer and Amelie
+    Wuppermann</p>
 
 
 <h2>Monographs</h2>
