--- a/_pages/research.html
+++ b/_pages/research.html
@@ -14,8 +14,11 @@ author_profile: true
 <p style="margin: 0; margin-left: 25px">
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
+</p>
 <details>
-    <summary>Abstract</summary>
+    <p style="margin: 0; margin-left: 25px">
+        <summary>Abstract</summary>
+    </p>
     <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
             hospitals largely rely
             on public
@@ -36,7 +39,7 @@ author_profile: true
                 investments.</small>
     </p>
 </details>
-</p>
+
 
 
 <h2>Working Papers</h2>
