--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,10 +15,8 @@ author_profile: true
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
 </p>
-<details>
-    <p style="margin: 0; margin-left: 25px">
-        <summary>Abstract</summary>
-    </p>
+<details style="margin: 0">
+    <summary>Abstract</summary>
     <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
             hospitals largely rely
             on public
