--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,7 +15,7 @@ author_profile: true
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
     <b>Health Policy</b>, 2024, 142:105012
 </p>
-<details style="margin: 0">
+<details style="margin-left: 25px">
     <summary>Abstract</summary>
     <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
             hospitals largely rely
