--- a/_pages/research.html
+++ b/_pages/research.html
@@ -44,10 +44,12 @@ author_profile: true
 <p style="margin: 0">
     <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
         target="_blank">Retirement and Loneliness</a> (December 2023)<br>
+</p>
+<p style="margin: 0; margin-left: 25px">
     with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
     Ruhr Economic Papers #1048
 </p>
-<details>
+<details style="margin-left: 25px">
     <summary>Abstract</summary>
     <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify">
         <small>We study the short- and
