--- a/_pages/research.html
+++ b/_pages/research.html
@@ -84,10 +84,10 @@ author_profile: true
 
 
 <h2>Monographs</h2>
-<p>
-    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-98800-008-8-pflegeheim-rating-report-2024"
-        target="_blank">Pflegeheim Rating Report 2024: Pflege ohne Personal?</a><br>
-    with Dörte Heger, Boris Augurzky, Henrik Bergschneider, Ingo Kolodziej and Christiane Wuckel<br>
+<a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-98800-008-8-pflegeheim-rating-report-2024"
+    target="_blank">Pflegeheim Rating Report 2024: Pflege ohne Personal?</a><br>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Dörte Heger, Boris Augurzky, Henrik Bergschneider,
+    Ingo Kolodziej and Christiane Wuckel<br>
     Heidelberg: medhochzwei (2023)
 </p>
 <p>
