--- a/_pages/research.html
+++ b/_pages/research.html
@@ -13,7 +13,7 @@ author_profile: true
 </p>
 <p style="margin: 0; margin-left: 25px">
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
-    <b>Health Policy</b>, 2024, 142:105012
+    <b>Health Policy</b>, 2024, 142: 105012
 </p>
 <details style="margin-left: 25px">
     <summary>Abstract</summary>
@@ -90,21 +90,21 @@ author_profile: true
     Ingo Kolodziej and Christiane Wuckel<br>
     Heidelberg: medhochzwei (2023)
 </p>
-<p>
-    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2023-978-3-86216-976-4"
-        target="_blank">Krankenhaus Rating Report 2023: Die Revolution?!</a><br>
-    with Boris Augurzky, Sebastian Krolop, Daniel Monsees, Adam Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
+<a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2023-978-3-86216-976-4"
+    target="_blank">Krankenhaus Rating Report 2023: Die Revolution?!</a><br>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Boris Augurzky, Sebastian Krolop, Daniel Monsees, Adam
+    Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
     Heidelberg: medhochzwei (2023)
 </p>
-<p>
-    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2022-978-3-86216-915-3"
-        target="_blank">Krankenhaus Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</a><br>
-    with Boris Augurzky, Sebastian Krolop, Daniel Monsees, Adam Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
+<a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2022-978-3-86216-915-3"
+    target="_blank">Krankenhaus Rating Report 2022: Vom Krankenhaus zum Geisterhaus?</a><br>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px"> with Boris Augurzky, Sebastian Krolop, Daniel Monsees,
+    Adam Pilny, Christoph M. Schmidt and Christiane Wuckel<br>
     Heidelberg: medhochzwei (2022)
 </p>
-<p>
-    <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-86216-835-4-pflegeheim-rating-report-2022"
-        target="_blank">Pflegeheim Rating Report 2022: Der Pflegemarkt unter Druck - Zeit für Veränderung</a><br>
-    with Dörte Heger, Boris Augurzky, Ingo Kolodziej and Christiane Wuckel<br>
+<a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-86216-835-4-pflegeheim-rating-report-2022"
+    target="_blank">Pflegeheim Rating Report 2022: Der Pflegemarkt unter Druck - Zeit für Veränderung</a><br>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px"> with Dörte Heger, Boris Augurzky, Ingo Kolodziej and
+    Christiane Wuckel<br>
     Heidelberg: medhochzwei (2021)
 </p>
