--- a/_pages/research.html
+++ b/_pages/research.html
@@ -47,7 +47,8 @@ author_profile: true
 </p>
 <p style="margin: 0; margin-left: 25px">
     with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
-    Ruhr Economic Papers #1048
+    Ruhr Economic Papers #1048<br>
+    under review, <b>Health Economics</b>
 </p>
 <details style="margin-left: 25px">
     <summary>Abstract</summary>
@@ -64,6 +65,14 @@ author_profile: true
             appears to be driven by women lacking companionship when their partner is not yet retired.
         </small>
 </details>
+</p>
+
+<p style="margin: 0">
+    A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar<br>
+</p>
+<p style="margin: 0; margin-left: 25px">
+    with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering<br>
+    under review, <b>The Lancet Digital Health</b>
 </p>
 
 <!--
