--- a/_pages/research.html
+++ b/_pages/research.html
@@ -48,11 +48,10 @@ author_profile: true
 <p style="margin: 0; margin-left: 25px">
     with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
     Ruhr Economic Papers #1048<br>
-    under review, <b>Health Economics</b>
 </p>
 <details style="margin-left: 25px">
     <summary>Abstract</summary>
-    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify">
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 0.8" align="justify">
         <small>We study the short- and
             long-term effects of retirement on loneliness
             using panel data from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
