--- a/_pages/research.html
+++ b/_pages/research.html
@@ -51,7 +51,7 @@ author_profile: true
 </p>
 <details style="margin-left: 25px">
     <summary>Abstract</summary>
-    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 0.8" align="justify">
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 1" align="justify">
         <small>We study the short- and
             long-term effects of retirement on loneliness
             using panel data from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
@@ -64,6 +64,16 @@ author_profile: true
             appears to be driven by women lacking companionship when their partner is not yet retired.
         </small>
 </details>
+</p>
+
+
+<h2>Work in Progress</h2>
+<p style="margin: 0">
+    <b>A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar</b><br>
+</p>
+<p style="margin: 0; margin-left: 25px">
+    with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering<br>
+    under review, <b>Health Policy and Technology</b>
 </p>
 
 
