--- a/_pages/research.html
+++ b/_pages/research.html
@@ -17,7 +17,7 @@ author_profile: true
 </p>
 <details style="margin-left: 25px">
     <summary>Abstract</summary>
-    <p style="margin: 0; padding: 12px; background-color: #F2F4F4;" align="justify"><small>German
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 1" align="justify"><small>German
             hospitals largely rely
             on public
             investments for digitization. As these have been insufficient, hospitals had to use own profits to foster
