--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,6 +5,22 @@ permalink: /research/
 author_profile: true
 ---
 
+<h2>Work in Progress</h2>
+
+"Gene-environment interactions with essential heterogeneity"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal
+</p>
+"Can differences in cognitive performance from the “genetic lottery” be compensated by educational reform?"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Matthias Westphal</p>
+"Life‑cycle Health Effects of Compulsory Schooling"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
+"A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Alexander Geissler, Malte Haring, Volker Amelung,
+    Sylvia Thun and Alexander Haering</p>
+
+
+
+
 <h2>Journal Articles</h2>
 <p style="margin: 0">
     <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank"><b>The
@@ -67,14 +83,7 @@ author_profile: true
 </p>
 
 
-<h2>Work in Progress</h2>
-<p style="margin: 0">
-    <b>A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar</b><br>
-</p>
-<p style="margin: 0; margin-left: 25px">
-    with Alexander Geissler, Malte Haring, Volker Amelung, Sylvia Thun and Alexander Haering<br>
-    under review, <b>Health Policy and Technology</b>
-</p>
+
 
 
 <h2>Monographs</h2>
