--- a/_pages/research.html
+++ b/_pages/research.html
@@ -17,6 +17,7 @@ author_profile: true
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Alexander Geissler, Malte Haring, Volker Amelung,
     Sylvia Thun and Alexander Haering</p>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">under review, Health Policy and Technology</p>
 
 
 
