--- a/_pages/research.html
+++ b/_pages/research.html
@@ -15,9 +15,9 @@ author_profile: true
 "Life‑cycle Health Effects of Compulsory Schooling"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
-<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Alexander Geissler, Malte Haring, Volker Amelung,
+<p style="margin: 0; margin-left: 25px; margin-bottom: 0;">with Alexander Geissler, Malte Haring, Volker Amelung,
     Sylvia Thun and Alexander Haering</p>
-<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">under review, Health Policy and Technology</p>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">under review, <i>Health Policy and Technology</i></p>
 
 
 
