--- a/_pages/research.html
+++ b/_pages/research.html
@@ -5,24 +5,55 @@ permalink: /research/
 author_profile: true
 ---
 
-<h2>Work in Progress</h2>
 
+<h2>Work in Economics</h2>
+
+<h3>In Preparation</h3>
 "Gene-environment interactions with essential heterogeneity"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal
 </p>
-"Can differences in cognitive performance from the “genetic lottery” be compensated by educational reform?"
-<p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Matthias Westphal</p>
 "Life‑cycle Health Effects of Compulsory Schooling"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
+
+
+
+<h3>Working Papers</h3>
+<p style="margin: 0">
+    <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
+        target="_blank"><b>Retirement and Loneliness</b></a> (December 2023)<br>
+</p>
+<p style="margin: 0; margin-left: 25px">
+    with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
+    Ruhr Economic Papers #1048<br>
+</p>
+<details style="margin-left: 25px">
+    <summary>Abstract</summary>
+    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 1.1" align="justify">
+        <small>We study the short- and
+            long-term effects of retirement on loneliness
+            using panel data from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
+            exploit differences in retirement eligibility rules across and within countries in an instrumental variable
+            setting. While we find no clear effect in the short run, entry into retirement reduces loneliness several
+            years later. This reduction is driven by individuals being less likely to feel socially isolated and lacking
+            companionship. Our results suggest that individuals adapt to retirement by increasing their activity levels
+            and reap the benefits in terms of reduced loneliness and social isolation. Heterogeneity analysis by gender
+            shows that retirement increases feelings of loneliness for women in the short term and that this effect
+            appears to be driven by women lacking companionship when their partner is not yet retired.
+        </small>
+</details>
+</p>
+
+
+
+<h2>Work in Health Policy</h2>
+
+<h3>Work in Progress</h3>
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 0;">with Alexander Geissler, Malte Haring, Volker Amelung,
     Sylvia Thun and Alexander Haering</p>
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">under review, <i>Health Policy and Technology</i></p>
 
-
-
-
-<h2>Journal Articles</h2>
+<h3>Journal Articles</h3>
 <p style="margin: 0">
     <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank"><b>The
             association of hospital profitability and digital maturity – An explorative study using data from the German
@@ -55,39 +86,7 @@ author_profile: true
     </p>
 </details>
 
-
-
-<h2>Working Papers</h2>
-<p style="margin: 0">
-    <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
-        target="_blank"><b>Retirement and Loneliness</b></a> (December 2023)<br>
-</p>
-<p style="margin: 0; margin-left: 25px">
-    with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
-    Ruhr Economic Papers #1048<br>
-</p>
-<details style="margin-left: 25px">
-    <summary>Abstract</summary>
-    <p style="margin: 0; padding: 12px; background-color: #F2F4F4; line-height: 1.1" align="justify">
-        <small>We study the short- and
-            long-term effects of retirement on loneliness
-            using panel data from the Survey of Health, Aging, and Retirement in Europe. To estimate causal effects, we
-            exploit differences in retirement eligibility rules across and within countries in an instrumental variable
-            setting. While we find no clear effect in the short run, entry into retirement reduces loneliness several
-            years later. This reduction is driven by individuals being less likely to feel socially isolated and lacking
-            companionship. Our results suggest that individuals adapt to retirement by increasing their activity levels
-            and reap the benefits in terms of reduced loneliness and social isolation. Heterogeneity analysis by gender
-            shows that retirement increases feelings of loneliness for women in the short term and that this effect
-            appears to be driven by women lacking companionship when their partner is not yet retired.
-        </small>
-</details>
-</p>
-
-
-
-
-
-<h2>Monographs</h2>
+<h3>Monographs</h3>
 <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-98800-008-8-pflegeheim-rating-report-2024"
     target="_blank">Pflegeheim Rating Report 2024: Pflege ohne Personal?</a><br>
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Dörte Heger, Boris Augurzky, Henrik Bergschneider,
