--- a/_pages/research.html
+++ b/_pages/research.html
@@ -47,7 +47,7 @@ author_profile: true
 
 <h2>Work in Health Policy</h2>
 
-<h3>Work in Progress</h3>
+<h3>In Preparation</h3>
 "A nationwide digital maturity assessment of hospitals: Results from the German DigitalRadar"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 0;">with Alexander Geissler, Malte Haring, Volker Amelung,
     Sylvia Thun and Alexander Haering</p>
