--- a/_pages/research.html
+++ b/_pages/research.html
@@ -87,6 +87,12 @@ author_profile: true
 </details>
 
 <h3>Monographs</h3>
+<a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/krankenhaus-rating-report-2024-978-3-98800-074-3"
+    target="_blank">Krankenhaus Rating Report 2024: Zwischen Hoffen und Bangen</a><br>
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Boris Augurzky, Sebastian Krolop, Daniel Monsees,
+    Henrik Bergschneider, Adam Pilny and Christoph M. Schmidt<br>
+    Heidelberg: medhochzwei (2024)
+</p>
 <a href="https://www.medhochzwei-verlag.de/Shop/ProduktDetail/978-3-98800-008-8-pflegeheim-rating-report-2024"
     target="_blank">Pflegeheim Rating Report 2024: Pflege ohne Personal?</a><br>
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Dörte Heger, Boris Augurzky, Henrik Bergschneider,
