--- a/_pages/research.html
+++ b/_pages/research.html
@@ -20,7 +20,7 @@ author_profile: true
 <h3>Working Papers</h3>
 <p style="margin: 0">
     <a href="https://www.rwi-essen.de/fileadmin/user_upload/RWI/Publikationen/Ruhr_Economic_Papers/REP_23_1048.pdf"
-        target="_blank"><b>Retirement and Loneliness</b></a> (December 2023)<br>
+        target="_blank">Retirement and Loneliness</a> (December 2023)<br>
 </p>
 <p style="margin: 0; margin-left: 25px">
     with Sophie Guthmuller, Dörte Heger and Anna Werbeck<br>
@@ -55,9 +55,9 @@ author_profile: true
 
 <h3>Journal Articles</h3>
 <p style="margin: 0">
-    <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank"><b>The
-            association of hospital profitability and digital maturity – An explorative study using data from the German
-            DigitalRadar project</b></a><br>
+    <a href="https://www.sciencedirect.com/science/article/pii/S0168851024000228" target="_blank">The
+        association of hospital profitability and digital maturity – An explorative study using data from the German
+        DigitalRadar project</a><br>
 </p>
 <p style="margin: 0; margin-left: 25px">
     with Justus Vogel, Alexander Haering, Boris Augurzky and Alexander Geissler<br>
