--- a/_pages/research.html
+++ b/_pages/research.html
@@ -10,7 +10,7 @@ author_profile: true
 
 <h3>In Preparation</h3>
 "Gene-environment interactions with essential heterogeneity"
-<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Fabian Dehos, Hendrik Schmitz and Matthias Westphal
+<p style="margin: 0; margin-left: 25px; margin-bottom: 10px">with Hendrik Schmitz and Matthias Westphal
 </p>
 "Life‑cycle Health Effects of Compulsory Schooling"
 <p style="margin: 0; margin-left: 25px; margin-bottom: 10px;">with Hendrik Schmitz and Beatrice Baaba Tawiah</p>
