--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 title: "CV"
-permalink: /cv/
+permalink: /cv
 author_profile: true
 redirect_from:
 - /resume
@@ -12,8 +12,8 @@ redirect_from:
 {% capture written_label %}'None'{% endcapture %}
 
 If the embedded PDF below does not load, you can <u><a
-        href="https://s3joholl.github.io/files/hollenbach_cv.pdf">download it
-        here.</a></u>
+                href="https://s3joholl.github.io/files/hollenbach_cv.pdf">download it
+                here.</a></u>
 <br />
 
 <embed src="https://s3joholl.github.io/files/hollenbach_cv.pdf" type="application/pdf" width="100%" />
